--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <!-- bootstrap css -->
     <link
       rel="stylesheet"
-      href="/assets/bootstrap-5.3.3-dist/css/bootstrap.min.css"
+      href="./assets/bootstrap-5.3.3-dist/css/bootstrap.min.css"
     />
 
     <!-- bootstrap icons link -->
@@ -16,10 +16,10 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
     />
 
-    <link rel="stylesheet" href="/assets/css/style.css" />
+    <link rel="stylesheet" href="./assets/css/style.css" />
 
     <!-- link js file -->
-    <script src="/assets/js/main.js" defer></script>
+    <script src="./assets/js/main.js" defer></script>
   </head>
   <body>
     <div class="wrapper position-relative">
